--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Hello, I'm Suriya</h1>
+  <img src="Images/RK Suriya Varshan ID.jpg" alt="Suriya's photo" width="180" height="200"  margin-top="40px" class="profile-pic">
   <p>This is my personal website.</p>
 </body>
 </html>
